--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,6 +2,107 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define functions\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "#Import the data from the file\n",
+    "def read_data(filename):\n",
+    "    #Open file and read all first 11 lines\n",
+    "    data = open(filename)\n",
+    "    text = ''\n",
+    "    params = {}\n",
+    "\n",
+    "    params1 = ['metric','fType']\n",
+    "    for i in range(2):\n",
+    "        row   = data.readline()\n",
+    "        text += row\n",
+    "        params.update({params1[i]:row.split(':')[1][1:-1]})\n",
+    "    params2 = ['p0','r0','d','q','deltaR']\n",
+    "    for i in range(5):\n",
+    "        row   = data.readline()\n",
+    "        text += row\n",
+    "        params.update({params2[i]:float(row.split(':')[1])})\n",
+    "    params3 = ['maxR','iterations','nP','time']\n",
+    "    for i in range(4):\n",
+    "        row   = data.readline()\n",
+    "        text += row\n",
+    "        params.update({params3[i]:int(row.split(':')[1])})\n",
+    "    params.update({'text':text})\n",
+    "    #Read data for R, phi, Phi and Pi\n",
+    "    rdata = list(map(float,(data.readline().split(','))[:-1]))\n",
+    "    fxydata = data.readlines()\n",
+    "    data.close()\n",
+    "    len_3 = int(len(fxydata)/3)\n",
+    "    if(len_3*3 !=len(fxydata)):\n",
+    "        raise ValueError\n",
+    "\n",
+    "    for i in range(3*len_3):\n",
+    "        fxydata[i] = list(map(float,(fxydata[i].split(','))[:-1]))\n",
+    "    fdata = fxydata[:len_3]\n",
+    "    xdata = fxydata[len_3:2*len_3]\n",
+    "    ydata = fxydata[2*len_3:]\n",
+    "\n",
+    "    return rdata, fdata, xdata, ydata, params\n",
+    "\n",
+    "import matplotlib.animation as animation\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#Animation in paralel of scalar fields\n",
+    "def animate_data(r, f, x, y, params):\n",
+    "\n",
+    "    IPF = 5 #Iterations per frame\n",
+    "    iterations = len(f)\n",
+    "    FRAMES = int(iterations/IPF)\n",
+    "\n",
+    "    fig, ax = plt.subplots(3,1,figsize=(12,12),dpi=100)\n",
+    "\n",
+    "    Fplot = ax[0].plot(r,f[0])[0]\n",
+    "    Xplot = ax[1].plot(r,x[0])[0]\n",
+    "    Yplot = ax[2].plot(r,y[0])[0]\n",
+    "    ax[1].set_ylim(-ax[0].get_ylim()[1],ax[0].get_ylim()[1])\n",
+    "    ax[2].set_ylim( ax[0].get_ylim())\n",
+    "    #Make limits for phi plot based on maximum initial difference from external point\n",
+    "    deltaLim = max(f[0][-1] -ax[0].get_ylim()[0], ax[0].get_ylim()[1] -f[0][-1])\n",
+    "    ax[0].set_ylim(f[0][-1]-deltaLim,f[0][-1]+deltaLim)\n",
+    "    ax[0].set_title('$\\phi$')\n",
+    "    ax[1].set_title('$\\Phi$')\n",
+    "    ax[2].set_title('$\\Pi$')\n",
+    "\n",
+    "    #Create a function that changes the data every frame\n",
+    "    def animate(i):\n",
+    "        it = i*IPF\n",
+    "        Fplot.set_data(r,f[it])\n",
+    "        Xplot.set_data(r,x[it])\n",
+    "        Yplot.set_data(r,y[it])\n",
+    "        return Xplot,Yplot\n",
+    "\n",
+    "    #Make the animation\n",
+    "    anim = animation.FuncAnimation(fig, animate, frames=FRAMES,\n",
+    "                                    interval=100, repeat_delay=3000)\n",
+    "\n",
+    "    anim.save('newtest.gif',writer='pillow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"Output.dat\"\n",
+    "\n",
+    "r, f, x, y, params = read_data(filename)\n",
+    "animate_data(r, f, x, y, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -16,13 +117,13 @@
     "r0 = \"0\"\n",
     "d  = \"0\"\n",
     "q  = \"0\"\n",
-    "iterations = \"0\"\n",
-    "maxR = \"0\"\n",
+    "iterations = \"20000\"\n",
+    "maxR = \"70\"\n",
     "processes = [\"1\",\"2\",\"3\",\"4\",\"5\",\"6\",\"7\",\"8\",\"9\",\"10\",\"11\",\"12\"]\n",
     "for i, p in enumerate(processes):\n",
     "    t0 = time.time()\n",
     "    try:\n",
-    "        output = subprocess.check_output([\".\\ColapsoRK4.exe\", fType, p0, r0, d, q, iterations, maxR, p], text=True,)\n",
+    "        output = subprocess.check_output([\".\\Collapse.exe\", fType, p0, r0, d, q, maxR, iterations, p], text=True,)\n",
     "        print(f\"Parallel execution:\\n{output}\")\n",
     "    except subprocess.CalledProcessError as e:\n",
     "        print(f\"Parallel execution (supposedly an error):\\n{e.output}\")"
@@ -30,81 +131,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define a function to make a gif directly from a file\n",
-    "\n",
+    "#Read the last runs and compare performance\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "def file_plot(filename):\n",
-    "    #Data is loaded\n",
-    "    rfilename = 'Rhistory.dat'\n",
-    "    xfilename = 'Xhistory.dat'\n",
-    "    yfilename = 'Yhistory.dat'\n",
-    "    ffilename = 'Fhistory.dat'\n",
+    "from os import listdir\n",
     "\n",
-    "    rdata = open(rfilename)\n",
-    "    xdata = open(xfilename)\n",
-    "    ydata = open(yfilename)\n",
-    "    fdata = open(ffilename)\n",
-    "    rdata_raw = rdata.readline()\n",
-    "    xdata_raw = xdata.readlines()\n",
-    "    ydata_raw = ydata.readlines()\n",
-    "    fdata_raw = fdata.readlines()\n",
-    "    iterations = len(xdata_raw)\n",
-    "    rdata_raw = list(map(float,(rdata_raw.split(','))[:-1]))\n",
-    "    for i in range(iterations):\n",
-    "        xdata_raw[i] = list(map(float,(xdata_raw[i].split(','))[:-1]))\n",
-    "        ydata_raw[i] = list(map(float,(ydata_raw[i].split(','))[:-1]))\n",
-    "        fdata_raw[i] = list(map(float,(fdata_raw[i].split(','))[:-1]))\n",
-    "    rdata.close()\n",
-    "    xdata.close()\n",
-    "    ydata.close()\n",
-    "    fdata.close()\n",
-    "\n",
-    "    #Animation in paralel of scalar fields\n",
-    "    import matplotlib.animation as animation\n",
-    "    import matplotlib.pyplot as plt\n",
-    "\n",
-    "    R = rdata_raw\n",
-    "    IPF = 5 #Iterations per frame\n",
-    "    FRAMES = int(iterations/IPF)\n",
-    "\n",
-    "    fig, ax = plt.subplots(3,1,figsize=(12,12),dpi=100)\n",
-    "\n",
-    "    Fplot = ax[0].plot(R,fdata_raw[0])[0]\n",
-    "    Xplot = ax[1].plot(R,xdata_raw[0])[0]\n",
-    "    Yplot = ax[2].plot(R,ydata_raw[0])[0]\n",
-    "    ax[1].set_ylim(-ax[0].get_ylim()[1],ax[0].get_ylim()[1])\n",
-    "    ax[2].set_ylim( ax[0].get_ylim())\n",
-    "    #Make limits for phi plot based on maximum initial difference from external point\n",
-    "    deltaLim = max(fdata_raw[0][-1] -ax[0].get_ylim()[0], ax[0].get_ylim()[1] -fdata_raw[0][-1])\n",
-    "    ax[0].set_ylim(fdata_raw[0][-1]-deltaLim,fdata_raw[0][-1]+deltaLim)\n",
-    "    ax[0].set_title('$\\phi$')\n",
-    "    ax[1].set_title('$\\Phi$')\n",
-    "    ax[2].set_title('$\\Pi$')\n",
-    "\n",
-    "    #Create a function that changes the data every frame\n",
-    "    def animate(i):\n",
-    "        it = i*IPF\n",
-    "        Fplot.set_data(R,fdata_raw[it])\n",
-    "        Xplot.set_data(R,xdata_raw[it])\n",
-    "        Yplot.set_data(R,ydata_raw[it])\n",
-    "        return Xplot,Yplot\n",
-    "\n",
-    "    #Make the animation\n",
-    "    anim = animation.FuncAnimation(fig, animate, frames=FRAMES,\n",
-    "                                    interval=100, repeat_delay=3000)\n",
-    "\n",
-    "    anim.save('newtest.gif',writer='pillow')"
+    "#Search files\n",
+    "df = pd.DataFrame(columns=('Metric','Threads','Time','Iterations'))\n",
+    "folder_files = listdir()\n",
+    "folder_files = [f for f in folder_files if (f.startswith('Output') and f.endswith('.dat'))]\n",
+    "for file in folder_files:\n",
+    "    params = read_data(file)[4]\n",
+    "    new_row = pd.DataFrame([[params['metric'],params['nP'],params['time'],params['iterations']]],columns=('Metric','Threads','Time','Iterations'))\n",
+    "    df = pd.concat((df, new_row), ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Threads</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Iterations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>1</td>\n",
+       "      <td>182</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>2</td>\n",
+       "      <td>147</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>3</td>\n",
+       "      <td>139</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>4</td>\n",
+       "      <td>137</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>5</td>\n",
+       "      <td>133</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>6</td>\n",
+       "      <td>135</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>7</td>\n",
+       "      <td>135</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>8</td>\n",
+       "      <td>135</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>9</td>\n",
+       "      <td>134</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>10</td>\n",
+       "      <td>133</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>11</td>\n",
+       "      <td>132</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Choptuik</td>\n",
+       "      <td>12</td>\n",
+       "      <td>131</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>1</td>\n",
+       "      <td>75</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>6</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>7</td>\n",
+       "      <td>24</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>8</td>\n",
+       "      <td>23</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>11</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Minkowski</td>\n",
+       "      <td>12</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Metric Threads Time Iterations\n",
+       "0    Choptuik       1  182      20000\n",
+       "1    Choptuik       2  147      20000\n",
+       "2    Choptuik       3  139      20000\n",
+       "3    Choptuik       4  137      20000\n",
+       "4    Choptuik       5  133      20000\n",
+       "5    Choptuik       6  135      20000\n",
+       "6    Choptuik       7  135      20000\n",
+       "7    Choptuik       8  135      20000\n",
+       "8    Choptuik       9  134      20000\n",
+       "9    Choptuik      10  133      20000\n",
+       "10   Choptuik      11  132      20000\n",
+       "11   Choptuik      12  131      20000\n",
+       "12  Minkowski       1   75      20000\n",
+       "13  Minkowski       2   42      20000\n",
+       "14  Minkowski       3   29      20000\n",
+       "15  Minkowski       4   24      20000\n",
+       "16  Minkowski       5   20      20000\n",
+       "17  Minkowski       6   20      20000\n",
+       "18  Minkowski       7   24      20000\n",
+       "19  Minkowski       8   23      20000\n",
+       "20  Minkowski       9   20      20000\n",
+       "21  Minkowski      10   20      20000\n",
+       "22  Minkowski      11   20      20000\n",
+       "23  Minkowski      12   20      20000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
