--- a/plot.ipynb
+++ b/plot.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -156,13 +156,13 @@
      "output_type": "stream",
      "text": [
       "Total iterations: 200000\n",
-      "Finished\n",
+      "Finished, total time: 809s\n",
       "\n",
       "Total iterations: 200000\n",
-      "Finished\n",
+      "Finished, total time: 494s\n",
       "\n",
       "Total iterations: 200000\n",
-      "Finished\n",
+      "Finished, total time: 778s\n",
       "\n"
      ]
     }
