--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,39 @@
     "    ax[1,1].set_title('$g^{rr}$')\n",
     "    ax[2,1].set_title('$g^{00}$')\n",
     "\n",
-    "    plt.show()\n"
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def read_binaries(a_bin='A.bin',Phi_bin='Phi.bin',R_bin='R.bin'):\n",
+    "    with open(a_bin,'rb') as file:\n",
+    "        grdata = np.fromfile(file, dtype=np.float64)**(-2)\n",
+    "    with open(Phi_bin,'rb') as file:\n",
+    "        Phidata = np.fromfile(file, dtype=np.float64)\n",
+    "    with open(R_bin,'rb') as file:\n",
+    "        rdata = np.fromfile(file, dtype=np.float64)\n",
+    "    return rdata, Phidata, grdata\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "180000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdata = read_binaries()\n",
+    "len(gdata)"
    ]
   },
   {
@@ -1103,7 +1135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
