Renamed some files and added animations

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,8 +280,26 @@
      "text": [
       "Índice  Nombre\n",
       "0       Output_162409.dat\n",
-      "Graficando Output_162409.dat ...\n",
-      "Animación de Output_162409.dat lista\n"
+      "1       Output_212423.dat\n",
+      "2       Output_long.dat\n",
+      "Graficando Output_long.dat ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bigba\\AppData\\Local\\Temp\\ipykernel_16136\\1245682468.py:47: RuntimeWarning: divide by zero encountered in power\n",
+      "  grdata = (np.array(alldata[3*len_5:4*len_5]))**(-2)\n",
+      "C:\\Users\\bigba\\AppData\\Local\\Temp\\ipykernel_16136\\1245682468.py:48: RuntimeWarning: divide by zero encountered in power\n",
+      "  g0data = (np.array(alldata[4*len_5:]))**(-2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animación de Output_long.dat lista\n"
      ]
     }
    ],
