--- a/plot.ipynb
+++ b/plot.ipynb
@@ -71,22 +71,31 @@
     "\n",
     "    return rdata, fdata, xdata, ydata, grdata, g0data, params\n",
     "\n",
-    "def read_binaries(a_bin='A.bin',Phi_bin='Phi.bin',R_bin='R.bin'):\n",
+    "def read_binaries(a_bin='A.bin',b_bin='B.bin',Phi_bin='Phi.bin',Pi_bin='Pi.bin',phi_bin='phi.bin',R_bin='R.bin'):\n",
     "    params = {'text':'text pending'}\n",
-    "    with open(Phi_bin,'rb') as file:\n",
-    "        xdata = np.fromfile(file, dtype=np.float64)\n",
-    "    with open(a_bin,'rb') as file:\n",
-    "        grdata = np.fromfile(file, dtype=np.float64)**(-2)\n",
     "    with open(R_bin,'rb') as file:\n",
     "        rdata = np.fromfile(file, dtype=np.float64)\n",
+    "    with open(Phi_bin,'rb') as file:\n",
+    "        xdata = np.fromfile(file, dtype=np.float64)\n",
     "    iterations = int(len(xdata)/len(rdata))\n",
     "    xdata = xdata.reshape((iterations,len(rdata)))\n",
-    "    grdata = grdata.reshape((iterations,len(rdata)))\n",
-    "    fdata = np.zeros_like(xdata)\n",
-    "    ydata = np.zeros_like(xdata)\n",
-    "    g0data = np.zeros_like(xdata)\n",
-    "    fdata[0] = 1\n",
+    "\n",
+    "    bins_list = [a_bin,b_bin,Pi_bin,phi_bin]\n",
+    "    data_list = []\n",
+    "    for bins in bins_list:\n",
+    "        try:\n",
+    "            with open(bins,'rb') as file:\n",
+    "                data_list.append(np.reshape(np.fromfile(file, dtype=np.float64),(iterations,len(rdata))))\n",
+    "        except:\n",
+    "            data_list.append(np.ones_like(xdata))\n",
+    "\n",
+    "    grdata = data_list[0]**(-2)\n",
+    "    g0data = data_list[1]**(-2)\n",
+    "    ydata = data_list[2]\n",
+    "    fdata = data_list[3]\n",
+    "\n",
     "    return rdata, fdata, xdata, ydata, grdata, g0data, params\n",
+    "\n",
     "import matplotlib.animation as animation\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -235,9 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bigba\\AppData\\Local\\Temp\\ipykernel_12084\\3130205903.py:71: RuntimeWarning: divide by zero encountered in power\n",
+      "  grdata = np.fromfile(file, dtype=np.float64)**(-2)\n"
+     ]
+    }
+   ],
    "source": [
     "#Animate data from binary files (python)\n",
     "animate_data('python.dat',1,ftype='bin')"
@@ -245,15 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total iterations: 10000\n",
-      "Finished, total time: 35s\n",
+      "Total iterations: 78100\n",
+      "Finished, total time: 2101s\n",
       "\n"
      ]
     }
@@ -268,9 +286,9 @@
     "r0 = \"0\"\n",
     "d  = \"0\"\n",
     "KOs  = [\"0.0\"]\n",
-    "deltaR = '0.01'\n",
+    "deltaR = '0.001'\n",
     "maxR = \"100\"\n",
-    "iterations = \"10000\"\n",
+    "iterations = \"78100\"\n",
     "processes = \"1\"\n",
     "p0 = '0.000008'\n",
     "\n",
@@ -281,28 +299,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now trying KO = 0.000466...\n",
-      "Success\n",
-      "\n",
-      "Now trying KO = 0.0004695...\n",
-      "Failure\n",
-      "\n",
-      "Now trying KO = 0.00046774999999999996...\n",
-      "Success\n",
-      "\n",
-      "Now trying KO = 0.00046862499999999997...\n",
-      "Failure\n",
-      "\n",
-      "Now trying KO = 0.00046818749999999996...\n",
-      "Success\n",
-      "\n"
+      "Now trying KO = 0.000466...\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command '['.\\\\Collapse.exe', '1', '0.000008', '0', '0', '0.000466', '0.0001', '100', '78100', '1']' returned non-zero exit status 3221225477.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m current_ko \u001b[38;5;241m=\u001b[39m next_ko\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNow trying KO = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcurrent_ko\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mCollapse.exe\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mfType\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mr0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcurrent_ko\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdeltaR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaxR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miterations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprocesses\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m#print(f\"{output}\")\u001b[39;00m\n\u001b[0;32m     25\u001b[0m data_phi \u001b[38;5;241m=\u001b[39m read_data()[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\subprocess.py:421\u001b[0m, in \u001b[0;36mcheck_output\u001b[1;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    418\u001b[0m         empty \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    419\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m empty\n\u001b[1;32m--> 421\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m run(\u001b[38;5;241m*\u001b[39mpopenargs, stdout\u001b[38;5;241m=\u001b[39mPIPE, timeout\u001b[38;5;241m=\u001b[39mtimeout, check\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    422\u001b[0m            \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\u001b[38;5;241m.\u001b[39mstdout\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.3056.0_x64__qbz5n2kfra8p0\\lib\\subprocess.py:526\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    524\u001b[0m     retcode \u001b[38;5;241m=\u001b[39m process\u001b[38;5;241m.\u001b[39mpoll()\n\u001b[0;32m    525\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m check \u001b[38;5;129;01mand\u001b[39;00m retcode:\n\u001b[1;32m--> 526\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(retcode, process\u001b[38;5;241m.\u001b[39margs,\n\u001b[0;32m    527\u001b[0m                                  output\u001b[38;5;241m=\u001b[39mstdout, stderr\u001b[38;5;241m=\u001b[39mstderr)\n\u001b[0;32m    528\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m CompletedProcess(process\u001b[38;5;241m.\u001b[39margs, retcode, stdout, stderr)\n",
+      "\u001b[1;31mCalledProcessError\u001b[0m: Command '['.\\\\Collapse.exe', '1', '0.000008', '0', '0', '0.000466', '0.0001', '100', '78100', '1']' returned non-zero exit status 3221225477."
      ]
     }
    ],
@@ -318,7 +335,7 @@
     "fType = \"1\"\n",
     "r0 = \"0\"\n",
     "d  = \"0\"\n",
-    "deltaR = '0.001'\n",
+    "deltaR = '0.0001'\n",
     "maxR = \"100\"\n",
     "iterations = \"78100\"\n",
     "processes = \"1\"\n",
@@ -400,14 +417,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Animation for Output_114014.dat ready\n"
+      "Animation for Output_001504.dat ready\n",
+      "Animation for Output_221558.dat ready\n",
+      "Animation for Output_233505.dat ready\n"
      ]
     }
    ],
@@ -417,7 +436,7 @@
     "folder_files = listdir()\n",
     "folder_files = [f for f in folder_files if (f.startswith('Output') and f.endswith('.dat'))]\n",
     "for file in folder_files:\n",
-    "        animate_data(file,ipf=10,ls='',marker='.',ms=1)\n",
+    "        animate_data(file,ipf=2,ls='',marker='.',ms=1)\n",
     "        print(f'Animation for {file} ready')"
    ]
   },
@@ -1164,7 +1183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1178,7 +1197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
