Added alpha plot
created a single animation for alpha

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -238,6 +238,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Animation of only alpha\n",
+    "def animate_alpha(filename = None, ipf = 1,output_name = None,ls='-',marker='',ms=0.5,ftype='dat'):\n",
+    "    if ftype=='dat':\n",
+    "        r,f,x,y,gr,g0,params = read_data(filename)\n",
+    "    elif ftype=='bin':\n",
+    "        r,f,x,y,gr,g0,params = read_binaries()\n",
+    "    else:\n",
+    "        raise ValueError\n",
+    "\n",
+    "    plt.ioff()\n",
+    "    IPF = ipf #Iterations per frame\n",
+    "    iterations = len(f)\n",
+    "    if ipf>iterations:\n",
+    "        raise ValueError\n",
+    "    FRAMES = int(iterations/IPF)\n",
+    "\n",
+    "    fig, ax = plt.subplots(1,figsize=(6,4),dpi=120)\n",
+    "\n",
+    "    Bplot = ax.plot(r,g0[0],ls=ls,marker=marker,markersize=ms)[0]\n",
+    "    ax.set_ylim(-0.1,1.1)\n",
+    "    ax.set_title('$\\\\alpha$')\n",
+    "\n",
+    "    #Create a function that changes the data every frame\n",
+    "    def animate(i):\n",
+    "        it = i*IPF\n",
+    "        Bplot.set_data(r,g0[it])\n",
+    "        return None\n",
+    "\n",
+    "    #Make the animation\n",
+    "    anim = animation.FuncAnimation(fig, animate, frames=FRAMES,\n",
+    "                                    interval=100, repeat_delay=3000)\n",
+    "    if (output_name == None):\n",
+    "        output_name = filename[:-3]+'gif'\n",
+    "    anim.save(output_name,writer='pillow')\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -284,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,9 +335,13 @@
      "output_type": "stream",
      "text": [
       "Índice  Nombre\n",
-      "0       Output_214911.dat\n",
-      "Graficando Output_214911.dat ...\n",
-      "Animación de Output_214911.dat lista\n"
+      "0       Output_125446.dat\n",
+      "1       Output_125749.dat\n",
+      "2       Output_193112.dat\n",
+      "3       Output_193413.dat\n",
+      "4       Output_193755.dat\n",
+      "Graficando Output_125749.dat ...\n",
+      "Animación de Output_125749.dat lista\n"
      ]
     }
    ],
@@ -310,7 +357,8 @@
     "    file_dat = dat_files[int(file_dat)]\n",
     "\n",
     "print(f'Graficando {file_dat} ...')\n",
-    "animate_data(file_dat,40,ls='',marker='.',ms=1)\n",
+    "#animate_data(file_dat,40,ls='',marker='.',ms=1)\n",
+    "animate_alpha(file_dat,40,ms=1)\n",
     "print(f'Animación de {file_dat} lista')\n",
     "#plot_last(inlist_dat,0)"
    ]
