--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#Animation in paralel of scalar fields\n",
-    "def animate_data(filename = None, ipf = 1,output_name = None,ls='-',marker='',ms=0.5,ftype='dat'):\n",
+    "def animate_data(filename = None, ipf = 1,output_name = None,ls='-',marker='',ms=0.5,ftype='dat',dpi=120):\n",
     "    if ftype=='dat':\n",
     "        r,f,x,y,gr,g0,m,params = read_data(filename)\n",
     "    elif ftype=='bin':\n",
@@ -175,26 +175,26 @@
     "        raise ValueError\n",
     "    FRAMES = int(iterations/IPF)\n",
     "\n",
-    "    fig, ax = plt.subplots(3,2,figsize=(12,12),dpi=120)\n",
+    "    fig, ax = plt.subplots(3,2,figsize=(12,12),dpi=dpi)\n",
     "\n",
     "    #Fplot = ax[0,0].plot(r,f[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
-    "    Fplot = ax[0,0].plot(r,m[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
+    "    Fplot = ax[0,0].plot(r,f[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Xplot = ax[1,0].plot(r,x[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Yplot = ax[2,0].plot(r,y[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Aplot = ax[1,1].plot(r,gr[0],ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Bplot = ax[2,1].plot(r,g0[0],ls=ls,marker=marker,markersize=ms)[0]\n",
     "    ax[0,0].text(1.21,0.98,params['text'],verticalalignment='top',transform=ax[0,0].transAxes)\n",
     "    ax[0,1].remove()\n",
-    "    ax[1,0].set_ylim( -ax[0,0].get_ylim()[1],ax[0,0].get_ylim()[1])\n",
-    "    ax[2,0].set_ylim(  ax[0,0].get_ylim())\n",
+    "    ax[1,0].set_ylim( -3*ax[1,0].get_ylim()[1],3*ax[1,0].get_ylim()[1])\n",
+    "    ax[2,0].set_ylim(  ax[1,0].get_ylim())\n",
     "    ax[1,1].set_ylim(-0.1,1.1)\n",
     "    ax[2,1].set_ylim(-0.1,1.1)\n",
     "    #Make limits for phi plot based on maximum initial difference from external point\n",
-    "    try:\n",
-    "        deltaLim = max(m[0][-1] -ax[0,0].get_ylim()[0], ax[0,0].get_ylim()[1] -m[0][-1])\n",
-    "        ax[0,0].set_ylim(f[0][-1]-deltaLim,f[0][-1]+deltaLim)\n",
-    "    except:\n",
-    "        None\n",
+    "    #try:\n",
+    "    #    deltaLim = max(m[0][-1] -ax[0,0].get_ylim()[0], ax[0,0].get_ylim()[1] -m[0][-1])\n",
+    "    #    ax[0,0].set_ylim(f[0][-1]-deltaLim,f[0][-1]+deltaLim)\n",
+    "    #except:\n",
+    "    #    None\n",
     "    ax[0,0].set_title('$\\phi$')\n",
     "    ax[1,0].set_title('$\\Phi$')\n",
     "    ax[2,0].set_title('$\\Pi$')\n",
@@ -204,7 +204,7 @@
     "    #Create a function that changes the data every frame\n",
     "    def animate(i):\n",
     "        it = i*IPF\n",
-    "        Fplot.set_data(r,m[it])\n",
+    "        Fplot.set_data(r,f[it])\n",
     "        Xplot.set_data(r,x[it])\n",
     "        Yplot.set_data(r,y[it])\n",
     "        Aplot.set_data(r,gr[it])\n",
@@ -231,7 +231,7 @@
     "    #Find the last iteration before collapse\n",
     "    last_iteration = iterations-1\n",
     "    for i in range(iterations):\n",
-    "        f_nan  = np.any(np.isnan( m[i]))\n",
+    "        f_nan  = np.any(np.isnan( f[i]))\n",
     "        #f_nan  = False\n",
     "        x_nan  = np.any(np.isnan( x[i]))\n",
     "        y_nan  = np.any(np.isnan( y[i]))\n",
@@ -243,7 +243,7 @@
     "\n",
     "    fig, ax = plt.subplots(3,2,figsize=(12,12),dpi=100)\n",
     "\n",
-    "    ax[0,0].plot(r,np.nan_to_num( m[last_iteration],nan=replace_nan))[0]\n",
+    "    ax[0,0].plot(r,np.nan_to_num( f[last_iteration],nan=replace_nan))[0]\n",
     "    ax[1,0].plot(r,np.nan_to_num( x[last_iteration],nan=replace_nan))[0]\n",
     "    ax[2,0].plot(r,np.nan_to_num( y[last_iteration],nan=replace_nan))[0]\n",
     "    ax[1,1].plot(r,np.nan_to_num(gr[last_iteration],nan=replace_nan))[0]\n",
@@ -752,8 +752,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total iterations: 78500\n",
-      "Finished, total time: 149s\n",
+      "Total iterations: 400000\n",
+      "Finished, total time: 2491s\n",
       "\n"
      ]
     }
@@ -766,32 +766,57 @@
     "\n",
     "fType = \"1\"\n",
     "r0 = \"0\"\n",
-    "d  = \"0\"\n",
+    "ds  = [\"1\",\"3\",\"5\"]\n",
+    "deltaR = '0.001'\n",
+    "maxR = \"50\"\n",
+    "iterations = \"150000\"\n",
+    "p0s = ['0.000001','0.000005','0.00001']\n",
+    "\n",
+    "for d in ds:\n",
+    "    for p0 in p0s:\n",
+    "        output = subprocess.check_output([\".\\Collapse_minkowski.exe\",  fType, p0, r0, d, deltaR, maxR, iterations], text=True,)\n",
+    "        print(f\"{output}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate_data(ipf=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total iterations: 20000\n",
+      "Finished, total time: 38s\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test for in-going tanh curve\n",
+    "\n",
+    "fType = \"0\"\n",
+    "r0 = \"0\"\n",
+    "ds  = [\"3\"]\n",
     "deltaR = '0.01'\n",
     "maxR = \"50\"\n",
-    "iterations = \"10000\"\n",
-    "p0 = '0.000001'\n",
+    "iterations = \"20000\"\n",
+    "p0s = ['0.0004']\n",
     "\n",
-    "output = subprocess.check_output([\".\\Collapse_minkowski.exe\",  fType, p0, r0, d, deltaR, maxR, iterations], text=True,)\n",
-    "print(f\"{output}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animate_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test for in-going tanh curve"
+    "for d in ds:\n",
+    "    for p0 in p0s:\n",
+    "        output = subprocess.check_output([\".\\Collapse.exe\",  fType, p0, r0, d, deltaR, maxR, iterations], text=True,)\n",
+    "        print(f\"{output}\")"
    ]
   },
   {
