--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "        row   = data.readline()\n",
     "        text += row\n",
     "        params.update({params1[i]:row.split(':')[1][1:-1]})\n",
-    "    params2 = ['p0','r0','d','BH radius','BH mass','deltaR','maxR']\n",
+    "    params2 = ['p0','r0','d','deltaR','maxR','BH radius','BH mass']\n",
     "    for i in range(len(params2)):\n",
     "        row   = data.readline()\n",
     "        text += row\n",
@@ -122,7 +122,7 @@
     "        row   = data.readline()\n",
     "        text += row\n",
     "        params.update({params1[i]:row.split(':')[1][1:-1]})\n",
-    "    params2 = ['p0','r0','d','BH radius','BH mass','deltaR','maxR']\n",
+    "    params2 = ['p0','r0','d','deltaR','maxR','BH radius','BH mass']\n",
     "    for i in range(len(params2)):\n",
     "        row   = data.readline()\n",
     "        text += row\n",
@@ -177,18 +177,30 @@
     "\n",
     "    fig, ax = plt.subplots(3,2,figsize=(12,12),dpi=dpi)\n",
     "\n",
-    "    #Fplot = ax[0,0].plot(r,f[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
+    "    #Plot data at the first iteration\n",
     "    Fplot = ax[0,0].plot(r,f[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
+    "    Mplot = ax[0,1].plot(r,m[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Xplot = ax[1,0].plot(r,x[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Yplot = ax[2,0].plot(r,y[0] ,ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Aplot = ax[1,1].plot(r,gr[0],ls=ls,marker=marker,markersize=ms)[0]\n",
     "    Bplot = ax[2,1].plot(r,g0[0],ls=ls,marker=marker,markersize=ms)[0]\n",
-    "    ax[0,0].text(1.21,0.98,params['text'],verticalalignment='top',transform=ax[0,0].transAxes)\n",
-    "    ax[0,1].remove()\n",
     "    ax[1,0].set_ylim( -3*ax[1,0].get_ylim()[1],3*ax[1,0].get_ylim()[1])\n",
     "    ax[2,0].set_ylim(  ax[1,0].get_ylim())\n",
     "    ax[1,1].set_ylim(-0.1,1.1)\n",
     "    ax[2,1].set_ylim(-0.1,1.1)\n",
+    "\n",
+    "    #Set up text\n",
+    "    #ax[0,1].remove()\n",
+    "    #ax[0,0].text(1.21,0.98,params['text'],verticalalignment='top',transform=ax[0,0].transAxes)\n",
+    "    text = params['text'].split('\\n')[:-1]\n",
+    "    text1 = text[:len(text)//2]\n",
+    "    text2 = text[len(text)//2:]\n",
+    "    text1 = '\\n'.join(text1)\n",
+    "    text2 = '\\n'.join(text2)\n",
+    "    ax[0,0].text(0.95,1.1,text1,verticalalignment='bottom',horizontalalignment='right',transform=ax[0,0].transAxes)\n",
+    "    ax[0,0].text(1.05,1.1,text2,verticalalignment='bottom',horizontalalignment='left',transform=ax[0,0].transAxes)\n",
+    "    \n",
+    "\n",
     "    #Make limits for phi plot based on maximum initial difference from external point\n",
     "    #try:\n",
     "    #    deltaLim = max(m[0][-1] -ax[0,0].get_ylim()[0], ax[0,0].get_ylim()[1] -m[0][-1])\n",
@@ -198,6 +210,7 @@
     "    ax[0,0].set_title('$\\phi$')\n",
     "    ax[1,0].set_title('$\\Phi$')\n",
     "    ax[2,0].set_title('$\\Pi$')\n",
+    "    ax[0,1].set_title('$M$')\n",
     "    ax[1,1].set_title('$g^{rr}$')\n",
     "    ax[2,1].set_title('$g^{00}$')\n",
     "\n",
@@ -205,6 +218,7 @@
     "    def animate(i):\n",
     "        it = i*IPF\n",
     "        Fplot.set_data(r,f[it])\n",
+    "        Mplot.set_data(r,m[it])\n",
     "        Xplot.set_data(r,x[it])\n",
     "        Yplot.set_data(r,y[it])\n",
     "        Aplot.set_data(r,gr[it])\n",
@@ -307,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +803,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Metric: Choptuik',\n",
+       " 'Function type: Hyperbolic Tan',\n",
+       " 'p0: 4.0000000000e-04',\n",
+       " 'r0: 20.000000',\n",
+       " 'd: 3.000000',\n",
+       " 'R step size: 0.010000',\n",
+       " 'Maximum R: 50.000000',\n",
+       " 'Final BH radius: 0.000000',\n",
+       " 'Final BH mass: 0.000000',\n",
+       " 'Iterations: 20000',\n",
+       " 'Number of threads: 1',\n",
+       " 'Total simulation time: 38',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_params()['text'].split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
