Updates for testing

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
     "from os.path import getmtime\n",
     "import subprocess\n",
     "\n",
-    "#Import the data from the file\n",
-    "def read_data(filename = None):\n",
+    "#Import only the parameters from the file\n",
+    "def read_params(filename = None):\n",
     "    #If no filename is given, read the last .dat file\n",
     "    if filename == None:\n",
     "        #Animate a file\n",
@@ -52,7 +52,30 @@
     "        row   = data.readline()\n",
     "        text += row\n",
     "        params.update({params3[i]:int(row.split(':')[1])})\n",
-    "    params.update({'text':text})\n",
+    "    params.update({'text':text[:-1]})\n",
+    "\n",
+    "    return params\n",
+    "\n",
+    "#Import the data from the file\n",
+    "def read_data(filename = None):\n",
+    "    #If no filename is given, read the last .dat file\n",
+    "    if filename == None:\n",
+    "        #Animate a file\n",
+    "        last_date = 0\n",
+    "        dat_files = listdir()\n",
+    "        for f in dat_files:\n",
+    "            if f.endswith('.dat'):\n",
+    "                date = getmtime(f)\n",
+    "                if date > last_date:\n",
+    "                    last_date = date\n",
+    "                    filename = f\n",
+    "\n",
+    "    #Open file and read the first lines\n",
+    "    data = open(filename)\n",
+    "    params = read_params(filename)\n",
+    "    for _ in range(len(params['text'].splitlines())):\n",
+    "        data.readline()\n",
+    "\n",
     "    #Read data for R, phi, Phi and Pi\n",
     "    rdata = list(map(float,(data.readline().split(','))[:-1]))\n",
     "    alldata = data.readlines()\n",
@@ -98,47 +121,6 @@
     "import matplotlib.animation as animation\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "#Import only the parameters from the file\n",
-    "def read_params(filename = None):\n",
-    "    #If no filename is given, read the last .dat file\n",
-    "    if filename == None:\n",
-    "        #Animate a file\n",
-    "        last_date = 0\n",
-    "        dat_files = listdir()\n",
-    "        for f in dat_files:\n",
-    "            if f.endswith('.dat'):\n",
-    "                date = getmtime(f)\n",
-    "                if date > last_date:\n",
-    "                    last_date = date\n",
-    "                    filename = f\n",
-    "\n",
-    "    #Open file and read the first lines\n",
-    "    data = open(filename)\n",
-    "    text = ''\n",
-    "    params = {}\n",
-    "\n",
-    "    params1 = ['metric','fType']\n",
-    "    for i in range(len(params1)):\n",
-    "        row   = data.readline()\n",
-    "        text += row\n",
-    "        params.update({params1[i]:row.split(':')[1][1:-1]})\n",
-    "    params2 = ['p0','r0','d','deltaR','maxR','BH radius','BH mass']\n",
-    "    for i in range(len(params2)):\n",
-    "        row   = data.readline()\n",
-    "        text += row\n",
-    "        try:\n",
-    "            value = float(row.split(':')[1])\n",
-    "        except:\n",
-    "            value = -9999\n",
-    "        params.update({params2[i]:value})\n",
-    "    params3 = ['iterations','nP','time']\n",
-    "    for i in range(len(params3)):\n",
-    "        row   = data.readline()\n",
-    "        text += row\n",
-    "        params.update({params3[i]:int(row.split(':')[1])})\n",
-    "    params.update({'text':text})\n",
-    "\n",
-    "    return params\n",
     "\n",
     "def read_binaries(a_bin='A.bin',Phi_bin='Phi.bin',R_bin='R.bin'):\n",
     "    params = {'text':'text pending'}\n",
@@ -192,7 +174,7 @@
     "    #Set up text\n",
     "    #ax[0,1].remove()\n",
     "    #ax[0,0].text(1.21,0.98,params['text'],verticalalignment='top',transform=ax[0,0].transAxes)\n",
-    "    text = params['text'].split('\\n')[:-1]\n",
+    "    text = params['text'].splitlines()\n",
     "    text1 = text[:len(text)//2]\n",
     "    text2 = text[len(text)//2:]\n",
     "    text1 = '\\n'.join(text1)\n",
@@ -759,21 +741,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total iterations: 400000\n",
-      "Finished, total time: 2491s\n",
+      "Total iterations: 20000\n",
+      "Finished, total time: 31s\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Test for in-going gaussian curve\n",
+    "# Test for gaussian curve\n",
     "\n",
     "import subprocess\n",
     "import numpy as np\n",
@@ -781,9 +763,10 @@
     "fType = \"1\"\n",
     "r0 = \"0\"\n",
     "ds  = [\"1\",\"3\",\"5\"]\n",
+    "ds  = [\"3\"]\n",
     "deltaR = '0.001'\n",
     "maxR = \"50\"\n",
-    "iterations = \"150000\"\n",
+    "iterations = \"200000\"\n",
     "p0s = ['0.000001','0.000005','0.00001']\n",
     "\n",
     "for d in ds:\n",
@@ -803,61 +786,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Metric: Choptuik',\n",
-       " 'Function type: Hyperbolic Tan',\n",
-       " 'p0: 4.0000000000e-04',\n",
-       " 'r0: 20.000000',\n",
-       " 'd: 3.000000',\n",
-       " 'R step size: 0.010000',\n",
-       " 'Maximum R: 50.000000',\n",
-       " 'Final BH radius: 0.000000',\n",
-       " 'Final BH mass: 0.000000',\n",
-       " 'Iterations: 20000',\n",
-       " 'Number of threads: 1',\n",
-       " 'Total simulation time: 38',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "read_params()['text'].split('\\n')"
+    "# Test for tanh curve\n",
+    "\n",
+    "import subprocess\n",
+    "import numpy as np\n",
+    "\n",
+    "fType = \"0\"\n",
+    "r0 = \"0\"\n",
+    "ds  = ['1','3','5']\n",
+    "deltaR = '0.001'\n",
+    "maxR = \"50\"\n",
+    "iterations = \"200000\"\n",
+    "p0s = ['0.01','0.05','0.1']\n",
+    "\n",
+    "for d in ds:\n",
+    "    for p0 in p0s:\n",
+    "        output = subprocess.check_output([\".\\Collapse_minkowski.exe\",  fType, p0, r0, d, deltaR, maxR, iterations], text=True,)\n",
+    "        print(f\"{output}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flat field test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total iterations: 20000\n",
-      "Finished, total time: 38s\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test for in-going tanh curve\n",
+    "# Test for tanh curve\n",
     "\n",
-    "fType = \"0\"\n",
-    "r0 = \"0\"\n",
-    "ds  = [\"3\"]\n",
-    "deltaR = '0.01'\n",
+    "import subprocess\n",
+    "import numpy as np\n",
+    "\n",
+    "fType = '2'\n",
+    "r0 = '0'\n",
+    "d  = '0'\n",
+    "deltaR = '0.001'\n",
     "maxR = \"50\"\n",
-    "iterations = \"20000\"\n",
-    "p0s = ['0.0004']\n",
+    "iterations = \"200000\"\n",
+    "p0 = '1'\n",
+    "\n",
+    "output = subprocess.check_output([\".\\Collapse.exe\",  fType, p0, r0, d, deltaR, maxR, iterations], text=True,)\n",
+    "print(f\"{output}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Schwarzschild radius test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test for gaussian curve\n",
+    "\n",
+    "import subprocess\n",
+    "import numpy as np\n",
+    "\n",
+    "fType = \"1\"\n",
+    "r0 = \"0\"\n",
+    "ds  = ['3','3.5','4.0']\n",
+    "deltaR = '0.001'\n",
+    "maxR = \"50\"\n",
+    "iterations = \"200000\"\n",
+    "p0s = ['0.000004','0.000006','0.000008','0.00001']\n",
     "\n",
     "for d in ds:\n",
     "    for p0 in p0s:\n",
@@ -866,17 +872,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Prueba sin campo"
+    "# Test for tanh curve\n",
+    "\n",
+    "import subprocess\n",
+    "import numpy as np\n",
+    "\n",
+    "fType = \"0\"\n",
+    "r0 = \"0\"\n",
+    "ds  = ['3','3.5','4.0']\n",
+    "deltaR = '0.001'\n",
+    "maxR = \"50\"\n",
+    "iterations = \"200000\"\n",
+    "p0s = ['0.04','0.06','0.08','0.1']\n",
+    "\n",
+    "for d in ds:\n",
+    "    for p0 in p0s:\n",
+    "        output = subprocess.check_output([\".\\Collapse.exe\",  fType, p0, r0, d, deltaR, maxR, iterations], text=True,)\n",
+    "        print(f\"{output}\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Prueba de shcwarschild"
+    "critical_p0 = 1.9154831466382175e-06\n",
+    "critical_radius = 0.078\n",
+    "critical_mass = 0.03925\n",
+    "\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "#Get all radius and p0\n",
+    "from os import listdir\n",
+    "folder_files = listdir()\n",
+    "folder_files = [f for f in folder_files if (f.startswith('Output') and f.endswith('.dat'))]\n",
+    "#Sort by modification date\n",
+    "folder_files.sort(key=getmtime)\n",
+    "\n",
+    "results_df = pd.DataFrame(columns=['Radius','Mass','phi0'])\n",
+    "for i, file in enumerate(folder_files):\n",
+    "    #Get parameters from the simulation\n",
+    "    mass0 = 1\n",
+    "    BHradius = read_params(file)['BH radius']\n",
+    "    BHmass = read_params(file)['BH mass']\n",
+    "    phi0 = read_params(file)['p0']\n",
+    "    #Add values to the dataframe\n",
+    "    new_row = pd.DataFrame([[BHradius,BHmass,phi0,mass0]],columns=['BHRadius','BHMass','phi0','Mass0'])\n",
+    "    results_df = pd.concat((results_df,new_row),ignore_index=True)\n",
+    "#Plot log(delta r0) vs log(delta phi0)\n",
+    "mass = results_df['BHMass'].values\n",
+    "mass_frac = results_df['BHMass'].values/results_df['Mass0'].values\n",
+    "radius = results_df['BHRadius'].values\n",
+    "\n",
+    "plt.scatter(mass,radius)\n",
+    "plt.ylabel('BH radius')\n",
+    "plt.xlabel('BH Mass')\n",
+    "plt.plot((0,mass[-1]),(0,2*mass[-1]),'-r',label='m=2')\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1421,7 +1481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1435,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
